{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 139,
  "lineage": "a3e8cd0f-1164-160b-b8e7-f10b7ff43b43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:180294175666:instance/i-0e170fd456b653c33",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e170fd456b653c33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037579fd842474394",
            "private_dns": "ip-10-0-1-103.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-13-53-150-3.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.150.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d64aa72a7388bf4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ac8bcea94a5710f",
            "tags": {
              "Name": "VM-1"
            },
            "tags_all": {
              "Name": "VM-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0849846084c52700b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.ssh_sg",
            "aws_subnet.subnet_a",
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:180294175666:instance/i-056b05e4e9c52e6b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056b05e4e9c52e6b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ec12ffdb1ae2594",
            "private_dns": "ip-10-0-1-28.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-51-20-87-120.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.87.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03919a44b425af414",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ac8bcea94a5710f",
            "tags": {
              "Name": "VM-2"
            },
            "tags_all": {
              "Name": "VM-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0849846084c52700b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.ssh_sg",
            "aws_subnet.subnet_a",
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:180294175666:internet-gateway/igw-0db88115ef936cd91",
            "id": "igw-0db88115ef936cd91",
            "owner_id": "180294175666",
            "tags": {
              "Name": "MyInternetGateway"
            },
            "tags_all": {
              "Name": "MyInternetGateway"
            },
            "vpc_id": "vpc-055dd0769862fff0a"
          },
          "dependencies": [
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:180294175666:route-table/rtb-0c8579e3402cb5bde",
            "id": "rtb-0c8579e3402cb5bde",
            "owner_id": "180294175666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db88115ef936cd91",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-055dd0769862fff0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0131311f012a34fa8",
            "route_table_id": "rtb-0c8579e3402cb5bde",
            "subnet_id": "subnet-08ac8bcea94a5710f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.subnet_a",
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:180294175666:security-group/sg-0849846084c52700b",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0849846084c52700b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-security-group",
            "name_prefix": "",
            "owner_id": "180294175666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-055dd0769862fff0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:180294175666:subnet/subnet-08ac8bcea94a5710f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ac8bcea94a5710f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294175666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-055dd0769862fff0a"
          },
          "dependencies": [
            "aws_vpc.multicast_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "multicast_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:180294175666:vpc/vpc-055dd0769862fff0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af93eb0e42f5ced2",
            "default_route_table_id": "rtb-05029a140b0d7c73a",
            "default_security_group_id": "sg-0b2814f3f6db14af9",
            "dhcp_options_id": "dopt-0c7bc73c2f91fc920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055dd0769862fff0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05029a140b0d7c73a",
            "owner_id": "180294175666",
            "tags": {
              "Name": "MulticastVPC"
            },
            "tags_all": {
              "Name": "MulticastVPC"
            }
          }
        }
      ]
    }
  ]
}